<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExternalActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonBuatFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buat_file"/>
    <Button
        android:id="@+id/buttonUbahFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubah_file"/>
    <Button
        android:id="@+id/buttonBacaFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baca_file"/>
    <Button
        android:id="@+id/buttonHapusFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hapus_file"/>
    <TextView
        android:id="@+id/textBaca"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:textColorHint="#000"
        android:layout_gravity="center_vertical"
        android:hint="@string/hasil_baca_file"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:background="@color/colorHint"/>
</LinearLayout>